video - added logic and js to stop videos on modal close,  added styles to fix responsive aspect ratio issue for safari on mobile

--- a/scss/blocks/_video.scss
+++ b/scss/blocks/_video.scss
@@ -30,7 +30,7 @@
 
     .video-thumbnail-image {
         @include bg-image;
-        aspect-ratio: 4/3;
+        aspect-ratio: 16/9;
         width: 100%;
         height: 100%;
     }
@@ -71,7 +71,9 @@
 
         iframe {
             width: 100%;
-            height: 100%;
+            height: auto;
+            aspect-ratio: 16/9;
+            display: block;
         }
     }
 
