--- a/style.css
+++ b/style.css
@@ -12150,7 +12150,7 @@ body.admin-bar .slider-block.width-container-fluid .slick-list {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  aspect-ratio: 4/3;
+  aspect-ratio: 16/9;
   width: 100%;
   height: 100%;
 }
@@ -12183,7 +12183,9 @@ body.admin-bar .slider-block.width-container-fluid .slick-list {
 }
 .video-block .modal iframe {
   width: 100%;
-  height: 100%;
+  height: auto;
+  aspect-ratio: 16/9;
+  display: block;
 }
 @media (min-width: 768px) {
   .video-block .btn-close {
